--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap");
 
-
-
+html,
 body {
+  height: 100%;
+  background-color: black;
   font-family: "Open Sans", sans-serif !important;
-  /*background-color: black;*/
-
 }
+
+
 .navbar{
   background-color: #032541 !important;
-}
-.boxnovies{
-  border-radius: 5px;
-  overflow: hidden;
-  border: 1px solid #e3e3e3;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  height: 100%;
-}
+  /*background: rgb(121, 235, 255) !important;*/
 
-@media screen and (max-width: 480px) {
-  .navbar{
-    font-size: 10px;
-  }
 }
+/*.navbar-dark .navbar-nav .nav-link ,.navbar-dark .navbar-brand{*/
+/*  color: black !important;*/
+/*  font-weight: 600;*/
+/*}*/
+
+
+/*@media screen and (max-width: 480px) {*/
+/*  .navbar{*/
+/*    font-size: 10px;*/
+/*  }*/
+/*}*/
